# CoconutEngine

./: CMakeLists.txt  README.md
CoconutEngine/include/: Camera.h  Core.h  EBO.h  Event.h  Globals.h  Layer.h  Objects.h  Renderer.h  Shader.h  Utils.h  VAO.h  VBO.h  Vertex.h  Window.h
CoconutEngine/shaders/: fragment.glsl  vertex.glsl
CoconutEngine/source/: Core.cpp  EBO.cpp  Renderer.cpp  Shader.cpp  Utils.cpp  VAO.cpp  VBO.cpp  Vertex.cpp  Window.cpp
Sandbox/: Main.cpp
libs/OpenGL/include/glad/: glad.h
libs/OpenGL/src/: glad.c
